@@ -1,3 +1,8 @@
+2013-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>
+
+	* device/include/pic14/pic16regs.h:
+	  New common header for the pic14 family.
+
 2013-04-18 Borut Razem <borut.razem AT gmail.com>
 
 	* device/non-free/lib/pic14/libdev/mkall.sh,
